--- a/WEB_APIv1/WEB_APIv1/WEB_APIv1.client/src/app/components/about/about.component.html
+++ b/WEB_APIv1/WEB_APIv1/WEB_APIv1.client/src/app/components/about/about.component.html
@@ -4,20 +4,8 @@
   </header>
 
   <div class="reduced-font text-link" [@fadeInOut]>
-    <h4>Welcome to QuickApp</h4>
-    <p>
-      A startup project template for Quick Application Development.<br />
-      This application template provides a quick and convenient way to create ASP.NET Core 9.0 / Angular 19 applications.
-    </p>
-    <p>
-      <a title="QuickApp Pro" target="_blank" href="https://quickapp-pro.azurewebsites.net">LIVE DEMO 1 - Pro</a>
-      |
-      <a title="QuickApp Standard" target="_blank" href="https://quickapp-standard.azurewebsites.net">LIVE DEMO 2 - Standard</a>
-    </p>
-
-    <p>
-      <iframe src="https://github.com/sponsors/emonney/card" title="Sponsor emonney" height="225" width="600" class="github-sponsor-iframe" style="border: 0; border-radius: 5px"></iframe>
-    </p>
+    <h4>Welcome </h4>
+   
 
     <h5>Technologies</h5>
     <ul>
